samples/_failures_safe/1761513303_c2f892_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ef0e490.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
